Rename 'IBM token' into API key.

--- a/QV_calculation.ipynb
+++ b/QV_calculation.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\", token=os.getenv(\"QISKIT_TOKEN\"))\n",
+    "service = QiskitRuntimeService(channel=\"ibm_cloud\", token=os.getenv(\"API_KEY\"))\n",
     "real_backend = service.backend(\"ibm_brisbane\")\n",
     "simulator = AerSimulator.from_backend(real_backend)"
    ]
